# CmakeTemplate

./: .gitattributes  .gitignore  .gitmodules  BuildExternalLibs.py  BuildExternalLibsLinux.py  CMakeLists.txt  README.md  main.cpp
Cmake/: Findassimp.cmake  Findfreetype.cmake  Findlua.cmake
Source/: CMakeLists.txt  main.cpp
Source/Common/: CMakeLists.txt
Source/Common/Header/: CommonPreDec.h  DebugMessage.h  ReturnCode.h
Source/Common/Source/: Configure.cpp  DebugMessage.cpp  ReturnCode.cpp
Source/ExternalLibs/: CMakeLists.txt
Source/ExternalLibs/ManualBuild/: CMakeLists.txt
Source/ExternalLibs/ManualBuild/Lib/: DirectXTK.lib  DirectXTKd.lib  Effects11.lib  Effects11d.lib
